--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,144 @@ pure25519==0.0.1
 typing_extensions==4.0.1
 uvloop==0.16.0
 yarl==1.7.2
+aiohttp==3.8.1
+aiosignal==1.2.0
+appdirs==1.4.4
+arandr==0.1.10
+asttokens==2.0.5
+async-timeout==4.0.1
+attrs==21.2.0
+backcall==0.2.0
+beautifulsoup4==4.10.0
+black==21.12b0
+Brotli==1.0.9
+btrfsutil==5.17
+CacheControl==0.12.6
+cairocffi==1.3.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.9
+click==8.0.3
+colorama==0.4.4
+colorlog==6.6.0
+colour==0.1.5
+commonmark==0.9.1
+configparser==5.2.0
+contextlib2==0.6.0.post1
+cryptography==37.0.0
+cycler==0.11.0
+decorator==5.1.1
+distlib==0.3.4
+distro==1.7.0
+docopt==0.6.2
+evdev==1.5.0
+executing==0.8.2
+fonttools==4.28.5
+frozenlist==1.2.0
+glcontext==2.3.4
+hata==1.1.109
+hikari==2.0.0.dev104
+hikari-lightbulb==2.1.0
+hikari-tanjun==2.1.0a1
+html5lib==1.1
+idna==3.3
+ipython==8.0.0
+keyutils==0.6
+kiwisolver==1.3.2
+lavasnek-rs==0.1.0a3
+LibreGaming==0.1.1
+lightdm-gtk-greeter-settings==1.2.2
+lit==13.0.1.dev0
+lxml==4.8.0
+manimgl==1.3.0
+ManimPango==0.3.1
+mapbox-earcut==1.0.0
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+moderngl==5.6.4
+moderngl-window==2.4.1
+more-itertools==8.12.0
+mpmath==1.2.1
+msgpack==1.0.3
+multidict==5.2.0
+multipledispatch==0.6.0
+mutagen==1.45.1
+mypy-extensions==0.4.3
+npyscreen==4.10.5
+numpy==1.22.1
+optimus-manager==1.4
+ordered-set==4.0.2
+packaging==21.3
+pathspec==0.9.0
+pep517==0.12.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.1.0
+platformdirs==2.4.1
+ply==3.11
+progress==1.6
+prompt-toolkit==3.0.24
+protonup==0.1.4
+psutil==5.9.0
+ptyprocess==0.7.0
+pure-eval==0.2.1
+pure25519==0.0.1
+pyalsa==1.2.6
+pycairo==1.21.0
+pycparser==2.21
+pycryptodomex==3.14.1
+pydub==0.25.1
+pygame==2.1.2
+pyglet==1.5.21
+Pygments==2.12.0
+PyGObject==3.42.1
+PyOpenGL==3.1.5
+pyOpenSSL==22.0.0
+pyparsing==3.0.9
+pypresence==4.2.1
+pyrr==0.10.3
+PySocks==1.7.1
+python-dateutil==2.8.2
+PyYAML==6.0
+qtile==0.21.0
+ranger-fm==1.9.3
+requests==2.27.1
+resolvelib==0.5.5
+retrying==1.3.3
+rich==12.0.1
+scipy==1.7.3
+screeninfo==0.8
+semantic-version==2.8.5
+sentry-sdk==1.5.10
+setuptools-rust==1.1.2
+shtab==1.5.4
+six==1.16.0
+skia-pathops==0.7.2
+soupsieve==2.3.1
+spotify-dl==8.3.0
+spotipy==2.19.0
+stack-data==0.1.4
+sympy==1.9
+team==1.0
+termcolor==1.1.0
+tldr==3.1.0
+toml==0.10.2
+tomli==2.0.1
+tqdm==4.62.3
+traitlets==5.1.1
+typing-extensions==4.0.1
+udiskie==2.4.2
+urllib3==1.26.9
+urwid==2.1.2
+uvloop==0.16.0
+validators==0.18.2
+vboxapi==1.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==10.3
+wget==3.2
+xcffib==0.11.1
+yarl==1.7.2
+youtube-dl==2021.12.17
+yt-dlp==2022.4.8
